--- a/project.json
+++ b/project.json
@@ -3,6 +3,7 @@
   "description": "Download all the monthly reports for a specific vendor and genrate a yearly report.",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Credentials.Activities": "[2.0.0]",
     "UiPath.Excel.Activities": "[2.11.4]",
     "UiPath.System.Activities": "[21.10.3]",
     "UiPath.Testing.Activities": "[1.4.4]",
